# helpdoctor

./: .env.example  .gitignore  Dockerfile  README.md  cloud.py  cognee_setup.py  doctor_desk.py  ingest.py  lambda_handler.py  pyproject.toml  queries.py  registry.py  reset.py  run.sh  server.py
.claude/: launch.json
data/: demo_transcript_echo_followup.txt
data/patient_records/: 01_discharge_summary_city_general_pune.txt  02_lab_report_sunrise_diagnostics_mumbai.txt  03_referral_letter_nair_to_menon.txt  04_prescription_menon_meridian_chennai.txt  05_followup_note_kulkarni_pune.txt  06_dental_note_pune.txt  07_eye_exam_chennai.txt  08_ortho_note_mumbai.txt  09_wellness_checkup_chennai.txt
static/: index.html
