[project]
name = "patient-memory"
version = "0.1.0"
description = "Patient Health Memory — graph-based reasoning over scattered medical records with Cognee (hackathon demo)"
requires-python = ">=3.12"
dependencies = [
    "cognee>=1.2.2",
    "fastapi>=0.139.0",
    "mysql-connector-python>=9.7.0",
    "pdfplumber>=0.11.10",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "rapidocr-onnxruntime>=1.4.4",
    "uvicorn[standard]>=0.50.0",
]
